syntax = "proto3";

package sgtypes;

message ResourceBlob {
    bytes path = 2;
    bytes blob = 1;
}

message AccountState {
    repeated ResourceBlob states = 1;
}